# ChangeLog for dev-python/nevow
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/nevow/ChangeLog,v 1.22 2008/04/03 21:46:38 lordvan Exp $

*nevow-0.9.31 (03 Apr 2008)

  03 Apr 2008; Thomas Raschbacher <lordvan@gentoo.org> +nevow-0.9.31.ebuild:
  added 0.9.31

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

*nevow-0.9.29 (23 Feb 2008)

  23 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> -nevow-0.9.0.ebuild,
  +nevow-0.9.29.ebuild:
  Version bump (fixes test-failures on amd64: bug #206044).

  16 Jan 2008; Christian Faulhammer <opfer@gentoo.org> nevow-0.9.18.ebuild:
  stable x86, bug 206043

*nevow-0.9.18 (02 Nov 2007)

  02 Nov 2007; Ali Polatel <hawking@gentoo.org> -nevow-0.6.0.ebuild,
  -nevow-0.7.0.ebuild, -nevow-0.8.0.ebuild, +nevow-0.9.18.ebuild:
  Version bump. Drop old.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Jul 2006; Marien Zwart <marienz@gentoo.org> nevow-0.8.0.ebuild,
  +nevow-0.9.0.ebuild:
  Version bump, add twisted-web dependency, clean up src_test.

*nevow-0.9.0 (04 Jul 2006)

  04 Jul 2006; Marien Zwart <marienz@gentoo.org> nevow-0.8.0.ebuild,
  +nevow-0.9.0.ebuild:
  Version bump, add twisted-web dependency, clean up src_test.

  25 Jun 2006; Thomas Raschbacher <lordvan@gentoo.org> nevow-0.8.0.ebuild:
  fixed dep for nevow-0.8.0 as it requires twisted-2.4 (using
  twisted.python.versions)

*nevow-0.8.0 (10 Apr 2006)

  10 Apr 2006; Marien Zwart <marienz@gentoo.org> -nevow-0.1.ebuild,
  -nevow-0.2.0.ebuild, -nevow-0.4.1.ebuild, +nevow-0.8.0.ebuild:
  Version bump, clean up old ebuilds.

  09 Mar 2006; Danny van Dyk <kugelfang@gentoo.org> nevow-0.7.0.ebuild:
  Marked ~amd64.

  13 Feb 2006; Marien Zwart <marienz@gentoo.org> nevow-0.6.0.ebuild,
  nevow-0.7.0.ebuild: