@@ -1,8 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Nevow-0.9.18.tar.gz 461144 RMD160 b495f0a8059ef0f03e2a577298bad642ee2c5e31 SHA1 a8243cf68dd181763e712cd1cbd67500f7bf628f SHA256 f7ebe384899f2879a39df68341e475d26ee855cb2758d1d7b012e566875a28bf
-DIST Nevow-0.9.29.tar.gz 502687 RMD160 8d7f421e57836686da467f85c29d1666e45f9d69 SHA1 a61a8c89921c1b3f54a0d447e3b356057e834375 SHA256 887cb9f3fe7117fe8daefdb66ea3d44fb31e7aea0eb182985cd4ba411f950cc4
 DIST Nevow-0.9.31.tar.gz 505637 RMD160 4a178b4836628a394fe7fa4b648bcb0d2bfd4f98 SHA1 2e8fcd58a50108ebbbf365fdea93335191285fbd SHA256 b6377fe3727032c29182afc6d1e07e0b63262e989434513dc3c9385d1af072d7
 EBUILD nevow-0.9.18.ebuild 1329 RMD160 a244ae7ed3c07949183f087c7164ad4723e663f1 SHA1 8883e16ff4a92c7f6ff6c37d5d57af661421a31e SHA256 1e002ed398e96dc2b0066018974c34d2ad7abea6238bd86c898e52cbd6a70c8c
-EBUILD nevow-0.9.29.ebuild 1369 RMD160 a69b8b2bc7d2dbd0bb2643c05153b088a305036e SHA1 393a92651de262e94c1341c59734aeabc0231a93 SHA256 5d02eb74c09c2ee726abb25d4dc9b17d2ae6b0e2081b45762177dbaee2a47418
-EBUILD nevow-0.9.31.ebuild 1368 RMD160 ef610a6c68b4e2ca26433e00b96cddde423234d8 SHA1 b5f70b5451ea4a8255b5610f1d3b17b2677cf9c2 SHA256 1893786d7e5ae3bdc2f46cbe7bc899bca142005ab29c510e01a1878d1c77c2ce
-MISC ChangeLog 3124 RMD160 ce1e66008a7cacff0490b7689e3bbe9498b80b53 SHA1 036d3f1971cf151a87b830c1e617590af21d3432 SHA256 13fb420b56aa5ab3c54becbc4eeaf1596e704ea87ff1dc743ae3fb9c1a901653
+EBUILD nevow-0.9.31.ebuild 1368 RMD160 d7ef7a44a0e86621d3b1eca83c5d3e81e34656cf SHA1 1b5432a7bc1a6c96f86d1c7da31c28feb472255b SHA256 321aad5c3fcadf35291b96738a931d3468480cf71a663a7ad6367eb658214ddb
+MISC ChangeLog 3290 RMD160 d510b77333cb3d9ddf5032ce75a70e12225ff978 SHA1 63859db947fd7bb74e8d63670e678d3eed50da7b SHA256 097cc4d779f95eacb76dde9e8c419d6def4bc8c187433a96b35dafe1ac22db0f
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgrHGUACgkQQU4yORhF8iAEVwCeIDelF/cdFpIM8XPmyex2PY/F
+yZ0An0icyoDZEe4SEpte8sL8X9ZE9woG
+=3tdR
+-----END PGP SIGNATURE-----
