@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/nevow/Attic/nevow-0.9.31.ebuild,v 1.1 2008/04/03 21:46:38 lordvan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/nevow/Attic/nevow-0.9.31.ebuild,v 1.2 2008/05/14 17:07:44 hawking Exp $
 
 NEED_PYTHON="2.4"
 
@@ -16,7 +16,7 @@ SLOT="0"
 KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~sparc ~x86"
 IUSE="doc"
 
-RDEPEND=">=dev-python/twisted-2.4
+RDEPEND=">=dev-python/twisted-2.5
 	dev-python/twisted-web"
 DEPEND="${RDEPEND}
 	doc? ( dev-python/docutils )"
